--- a/style.css
+++ b/style.css
@@ -250,6 +250,8 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column-reverse;
+  gap: 20px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 17px;
@@ -281,6 +283,8 @@ footer {
   footer {
     position: fixed;
     bottom: 0px;
+    display: flex;
+    flex-direction: column;
   }
   
   #contact {
